Preferences: Text Rendering #124068
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#124068
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 11 Pro 22H2 64 Bits Japanese ver
Graphics card: NVIDIA GeForce RTX 4090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 552.41
Blender Version
Broken: version: 4.1.1, branch: blender-v4.1-release, commit date: 2024-04-15 15:11, hash:
e1743a0317bc
Worked: (newest version of Blender that worked as expected)
Short description of error
Preferences: Text Rendering: Interface Font: When I select meiryo bold,
the font seems to be thicker in ver3.X than it was in ver4.
It seems to be thinner. I don't know if it's a bug or a feature,
Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]
Eh I don't know either. There have been quite a bit of changes to font rendering. @Harley may be able to say more.
Interesting. I can see what you see and it seems odd and unexpected. But this might need some thought about whether it is a bug or not. This is a problem that only happens with bold fonts. Let me explain...
Blender now allows users to select the weight of text that you see in the interface. This is found at Edit / Preferences / Themes / Text Style:
The weight is exactly as you find in CSS, with a range from 100-900 with 400 being "normal". These values are not relative to the font's designed weight, but absolute. As in 100 is always super thin and 900 is always super chunky.
Now imagine changing the UI font to regular Meiryo. This font is designed with a weight of 400. And in blender the default weight in "Text Styles" is 400, so it looks fine.
But change the font to Meiryo Bold. This font is designed for weight 700, but you still have the "font styles" set to 400. In effect you are telling the system that you want to use a bold font but show it very thin. Blender is doing what you are asking of it. Change those weights to 700 and you will see it as it is intended.
Although this seems unexpected, I'm not certain of what I could change. I don't want to alter the users' selected text weight every time they change a font as that is overriding their settings. Luckily this only happens when changing to non-regular fonts. Perhaps I could bring up a warning dialog when you change to a font with a weight that differs from what is set in font styles. Or maybe I should just change the text style weights when you change the UI font. Needs some thought.
In the mean time just change the Text Style weights to 700 for this font. Sorry for the confusion.
@iss
Have I explained the above well enough for you to give your opinion? The more I think about it the more I think I should just change the user's Text Style weights when a new UI font is selected. Our text subsystem is quite accurately getting the designed weight and other metrics from the font when loaded so wouldn't take much work.
Edit: Probably only do this when changing to a non-variable (one that only contains a single weight) font.
Thanks @Harley :D
Changing
character_weight
(blender property) based on the selected font makes sense.I wonder how It worked in previous versions without updating the
character_weight
I have understood thoroughly. Thank you very much for your explanation.
Harley made a PR already so I'll reopen the report until fix lands in main :)