source/blender/editors/interface/interface.cc
@@ -6611,6 +6611,21 @@ void UI_reinit_font()
   uiStyleInit();
 }
 
+void UI_update_text_styles()
+{
+  if (BLF_has_variable_weight(0)) {
+    return;
+  }
+
+  const int weight = BLF_default_weight(0);
+  LISTBASE_FOREACH (uiStyle *, style, &U.uistyles) {
+    style->paneltitle.character_weight = weight;
+    style->grouplabel.character_weight = weight;
+    style->widgetlabel.character_weight = weight;
+    style->widget.character_weight = weight;
+  }
+}
+
 void UI_exit()
 {
   ui_resources_free();
